# floor-predictor

./: .gitignore  README.md  pipeline.ipynb  pyproject.toml
floor_predictior/osm_height_predictor/: geo.py
floor_predictior/osm_living_predictor/: __init__.py  amenity_processor.py  building_processor.py  downloader.py  feature_builder.py  model_handler.py  road_processor.py
floor_predictior/utils/: IsLivingChecker.py  constants.py
osm_height_predictor/: geo.py
osm_living_predictor/: amenity_processor.py  building_processor.py  config.py  downloader.py  feature_builder.py  model_handler.py  pipeline.py  road_processor.py
