[project]
name = "floor-predictor"
version = "0.1.0"
description = "OSM-based living/non-living and floors prediction pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Roman"}]

dependencies = [
  "tqdm>=4.66",
  "geopandas",
  "osmnx",
  "jenkspy",
  "matplotlib",
  "scikit-learn",
  "libpysal",
  "esda",
  "splot"
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.setuptools.packages.find]
where = ["."]
include = ["floor_predictior*"]
